<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="414dp"
        android:layout_height="733dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <Button
        android:id="@+id/btn_act_prod"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="156dp"
        android:backgroundTint="#FFAB00"
        android:text="@string/btn_editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_comprarProd"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="240dp"
        android:backgroundTint="#00C853"
        android:text="@string/btn_comprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_elim_prod"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="196dp"
        android:backgroundTint="#D50000"
        android:text="@string/btn_eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_agregar_carrito"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="280dp"
        android:backgroundTint="#0091EA"
        android:text="@string/btn_agregar_carrito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="90dp"
        android:layout_height="39dp"
        android:paddingTop="5dp"
        android:text="Producto:"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:paddingTop="5dp"
        android:text="Precio:"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:paddingTop="5dp"
        android:text="Descripción:"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/txt_nombrePro"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:paddingLeft="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="5dp"
        android:text="TextView"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/txt_precioPro"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:paddingLeft="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="5dp"
        android:text="TextView"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/txt_descripcionPro"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:paddingLeft="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="5dp"
        android:text="TextView"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>